<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#0696B4"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textFontWeight="6000"
        android:textColor="#1B262C"
        android:textStyle="bold"
        android:fontFamily="@font/nanumsquareroundr"
        android:padding="0dp"
        android:text="@string/choose_window"
        android:textSize="26sp"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textFontWeight="6000"
        android:textColor="#1B262C"
        android:textStyle="bold"
        android:fontFamily="@font/nanumsquareroundr"
        android:padding="0dp"
        android:text="숫자가 높을수록 투명해집니다"
        android:layout_marginBottom="74dp"
        android:textSize="25sp"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_third"
        android:textStyle="bold"
        android:textFontWeight="9000"
        android:textColor="#1B262C"
        android:textSize="18dp"
        android:fontFamily="@font/nanumsquareroundr"
        android:layout_marginBottom="10dp"
        android:text="@string/percent0" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_third"
        android:textStyle="bold"
        android:textFontWeight="9000"
        android:textColor="#1B262C"
        android:textSize="18dp"
        android:fontFamily="@font/nanumsquareroundr"
        android:layout_marginBottom="10dp"
        android:text="@string/percent20" />

    <Button
        android:id="@+id/button40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_third"
        android:textStyle="bold"
        android:textFontWeight="9000"
        android:textColor="#1B262C"
        android:textSize="18dp"
        android:fontFamily="@font/nanumsquareroundr"
        android:layout_marginBottom="10dp"
        android:text="@string/percent40" />

    <Button
        android:id="@+id/button60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_third"
        android:textStyle="bold"
        android:textFontWeight="9000"
        android:textColor="#1B262C"
        android:textSize="18dp"
        android:fontFamily="@font/nanumsquareroundr"
        android:layout_marginBottom="10dp"
        android:text="@string/percent60" />

    <Button
        android:id="@+id/button80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_third"
        android:textStyle="bold"
        android:textFontWeight="9000"
        android:textColor="#1B262C"
        android:textSize="18dp"
        android:fontFamily="@font/nanumsquareroundr"
        android:layout_marginBottom="10dp"
        android:text="@string/percent80" />

    <Button
        android:id="@+id/button100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_third"
        android:textStyle="bold"
        android:textFontWeight="9000"
        android:textColor="#1B262C"
        android:textSize="18dp"
        android:fontFamily="@font/nanumsquareroundr"
        android:layout_marginBottom="10dp"
        android:text="@string/percent100" />
</LinearLayout>
