<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#0696B4"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textFontWeight="6000"
        android:textColor="#1B262C"
        android:textStyle="bold"
        android:fontFamily="@font/nanumsquareroundr"
        android:padding="0dp"
        android:text="@string/put_temp"
        android:textSize="26sp"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textFontWeight="6000"
        android:textColor="#1B262C"
        android:textStyle="bold"
        android:fontFamily="@font/nanumsquareroundr"
        android:padding="0dp"
        android:text="현재 온도보다 목표 온도가 낮으면 냉방을 시작합니다"
        android:layout_marginBottom="40dp"
        android:textSize="16sp"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/editTextTemperature"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/nanumsquareroundr"
        android:hint="@string/put_ex"
        android:inputType="number"
        android:autofillHints="temperature"/>

    <Button
        android:id="@+id/buttonSubmitTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_third"
        android:textStyle="bold"
        android:textFontWeight="9000"
        android:textColor="#1B262C"
        android:textSize="18dp"
        android:fontFamily="@font/nanumsquareroundr"
        android:text="@string/ok"/>
</LinearLayout>
